--- a/worldmap/templates/html/worldmap-studio.html
+++ b/worldmap/templates/html/worldmap-studio.html
@@ -115,14 +115,14 @@
                          </td>
                      </tr>
                      <tr>
-                         <td style="padding:15px 15px 0px 0px; width: 65%;" >
+                         <td style="padding:15px 40Spx 0px 0px; width: 55%;" >
                             <label class="label setting-label" for="layer-control" style="width:70%;">Layer Controls (drag to reorder)</label>
                             <span style="width:26% !important; min-width:inherit; text-align:right" class="tip setting-help"><button disabled id="new-node">New node</button></span>
                             <div id="layer-control" class="scroll" style="height:155px">
                                 <div id="layer-controls"/>
                             </div>
                          </td>
-                         <td style="padding:15px 15px 0px 0px;width:35%;">
+                         <td style="padding:15px 15px 0px 35px;width:35%;">
                              <label class="label setting-label" style="width:40% !important;margin-right:0px;" for="sliders">{% trans "Sliders"%}</label>
                              <span style="width:49% !important; min-width:inherit; text-align:right" class="tip setting-help"><button id="new-slider">{% trans "New slider"%}</button></span>
                              <ul id="sliders" class="scroll" />
