--- a/worldmap/templates/html/worldmap-studio.html
+++ b/worldmap/templates/html/worldmap-studio.html
@@ -67,11 +67,11 @@
                   </div>
               </div>
               <div id="map-tab">
-                 <table style="width:900px">
+                 <table style="width:800px">
                      <tr>
                          <td colspan="2">
-                            <div style="float:left; width:530px;">
-                                <div style="float:left;margin-right:10px;width:530px">
+                            <div style="float:left; width:500px;">
+                                <div style="float:left;margin-right:10px;width:425px">
                                     <label for="map-url" style="margin-left:0px !important;width:100%;" class="label setting-label">Map URL</label>
                                     <input type="text" id="map-url" style="width:100% !important;padding:0px;" placeholder="required" class="required text ui-widget-content ui-corner-all"/>
                                 </div>
@@ -81,12 +81,12 @@
                                     <label class="dependent-property label setting-label" for="map-height">Height</label>
                                     <input type="text" id="map-height" style="font-size:small;width:40px !important;" placeholder="required" class="required-integer dependent-property text ui-widget-content ui-corner-all">
                                     <label class="dependent-property label setting-label" for="map-baseLayer">Base</label>
-                                    <input type="text" id="map-baseLayer" style="font-size:small;width:220px !important" title="Base Layer of map" placeholder="specify if needed" class="dependent-property text ui-widget-content ui-corner-all">
+                                    <input type="text" id="map-baseLayer" style="font-size:small;width:195px !important" title="Base Layer of map" placeholder="specify if needed" class="dependent-property text ui-widget-content ui-corner-all">
                                     <label class="dependent-property label setting-label" for="map-debug">DBG</label>
                                     <input type="checkbox" id="map-debug" title="enable debug mode" class="checkbox"/>
                                 </div>
                             </div>
-                            <div style="float:right;width:318px;">
+                            <div style="float:right;width:300px;">
                                 <div style="float:left;margin:5px 16px 0px 3px; padding:5px;border:1px solid darkgray" class="ui-corner-all">
                                     <span style="font-size: 70%;font-weight:bold; ">Viewport:</span>
                                     <span style="min-width:120px">
@@ -115,7 +115,7 @@
                          </td>
                      </tr>
                      <tr>
-                         <td style="padding:15px 40Spx 0px 0px; width: 55%;" >
+                         <td style="padding:15px 40px 0px 0px; width: 55%;" >
                             <label class="label setting-label" for="layer-control" style="width:70%;">Layer Controls (drag to reorder)</label>
                             <span style="width:26% !important; min-width:inherit; text-align:right" class="tip setting-help"><button disabled id="new-node">New node</button></span>
                             <div id="layer-control" class="scroll" style="height:155px">
