--- a/worldmap/templates/html/worldmap-studio.html
+++ b/worldmap/templates/html/worldmap-studio.html
@@ -76,10 +76,10 @@
                                     <input type="text" id="map-url" style="width:100% !important;padding:0px;" placeholder="required" class="required text ui-widget-content ui-corner-all"/>
                                 </div>
                                 <div style="float:right">
-                                    <label class="dependent-property label setting-label" for="map-width">Width</label>
-                                    <input type="text" id="map-width" style="font-size:small;width:40px !important;" placeholder="required" class="required-integer dependent-property text ui-widget-content ui-corner-all">
-                                    <label class="dependent-property label setting-label" for="map-height">Height</label>
-                                    <input type="text" id="map-height" style="font-size:small;width:40px !important;" placeholder="required" class="required-integer dependent-property text ui-widget-content ui-corner-all">
+                                    <label class="dependent-property label setting-label" for="map-width">Size W:</label>
+                                    <input type="text" id="map-width" style="font-size:small;width:30px !important;" placeholder="required" class="required-integer dependent-property text ui-widget-content ui-corner-all">
+                                    <label class="dependent-property label setting-label" for="map-height">H:</label>
+                                    <input type="text" id="map-height" style="font-size:small;width:30px !important;" placeholder="required" class="required-integer dependent-property text ui-widget-content ui-corner-all">
                                     <label class="dependent-property label setting-label" for="map-baseLayer">Base</label>
                                     <input type="text" id="map-baseLayer" style="font-size:small;width:195px !important" title="Base Layer of map" placeholder="specify if needed" class="dependent-property text ui-widget-content ui-corner-all">
                                     <label class="dependent-property label setting-label" for="map-debug">DBG</label>
