--- a/worldmap/templates/html/worldmap-studio.html
+++ b/worldmap/templates/html/worldmap-studio.html
@@ -76,7 +76,7 @@
                                     <input type="text" id="map-url" style="width:100% !important;padding:0px;" placeholder="required" class="required text ui-widget-content ui-corner-all"/>
                                 </div>
                                 <div style="float:right">
-                                    <label class="dependent-property label setting-label" for="map-width">Map size W:</label>
+                                    <label class="dependent-property label setting-label" for="map-width">Size W:</label>
                                     <input type="text" id="map-width" style="font-size:small;width:40px !important;" placeholder="required" class="required-integer dependent-property text ui-widget-content ui-corner-all">
                                     <label class="dependent-property label setting-label" for="map-height">H:</label>
                                     <input type="text" id="map-height" style="font-size:small;width:40px !important;" placeholder="required" class="required-integer dependent-property text ui-widget-content ui-corner-all">
