--- a/worldmap/templates/html/worldmap-studio.html
+++ b/worldmap/templates/html/worldmap-studio.html
@@ -75,7 +75,7 @@
                                     <label for="map-url" style="margin-left:0px !important;width:100%;" class="label setting-label">Map URL</label>
                                     <input type="text" id="map-url" style="width:100% !important;padding:0px;" placeholder="required" class="required text ui-widget-content ui-corner-all"/>
                                 </div>
-                                <div style="float:right">
+                                <div style="float:left">
                                     <label class="dependent-property label setting-label" for="map-width">Size W:</label>
                                     <input type="text" id="map-width" style="font-size:small;width:40px !important;" placeholder="required" class="required-integer dependent-property text ui-widget-content ui-corner-all">
                                     <label class="dependent-property label setting-label" for="map-height">H:</label>
